--- a/.themisrc
+++ b/.themisrc
@@ -1,2 +1,8 @@
 set noswapfile nobackup
-filetype plugin indent on
+function! T2T(F, ...) "To test two times by changing the option
+  set ic re=1 magic
+  call call(a:F, a:000)
+  set noic re=2 nomagic
+  call call(a:F, a:000)
+  set ic&vim re&vim magic&vim
+endfunction
